--- a/About.html
+++ b/About.html
@@ -140,9 +140,9 @@
                     <!-- Experience -->
                     <h6 class="playFair my-5 pt-5">Experience</h6>
                     <h5 class="lato pt-3">Huntington Ingalls Industries</h5>
-                    <p class="lato pb-4">3D Techinical Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Present</p>
+                    <p class="lato pb-4">Multimedia Specialist &nbsp; &#x2022; &nbsp; Apr 2019 - Present</p>
                     <h5 class="lato">Corys Thunder</h5>
-                    <p class="lato pb-4">3D Techinical Artist &nbsp; &#x2022; &nbsp; Sep 2015 - Apr 2019</p>
+                    <p class="lato pb-4">Multimedia Specialist &nbsp; &#x2022; &nbsp; Sep 2015 - Apr 2019</p>
                     <h5 class="lato">Delta V Engineering</h5>
                     <p class="lato pb-4">Junior Animator/Multimedia Specialist &nbsp; &#x2022; &nbsp; May 2013 - May 2015</p>
                 </div>
