--- a/About.html
+++ b/About.html
@@ -115,7 +115,7 @@
                     </div>
                     <div class="col-md-7 ps-3 pt-1">
                         <h5 class="mb-4 fw-normal">a designer, artist, developer, and behaviorial researcher hoping to further my career in the design space.</h5>
-                        <h5 class="mb-4 fw-normal">I'm a designer focused on Product and Brand, with a healthy addiction to animation and visual design. My goal is to create simple, beautiful, and accessible interfaces and interactions.</h5>
+                        <h5 class="mb-4 fw-normal">I'm a designer focused on Product and Brand, with an addiction to animation and visual design. My goal is to create simple, beautiful, and accessible interfaces and interactions.</h5>
                         <h5 class="fw-normal">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</h5>
                     </div>
                 </div>
