--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -118,7 +118,7 @@
         <section class="" style="margin: 9.375rem 0;">
             <div class="container px-4 px-lg-5">
                 <!-- Overview -->
-                <div class="UXCaseTeam row gx-0">
+                <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
                     <div class="text-center col-md-4">
                         <h5>Role</h5>
                         <p>Designer <br>
@@ -156,7 +156,7 @@
 
         <!-- Research ##########################-->
             <div class="container px-4 px-lg-5" id="VTP_Research">
-                <div class="">
+                <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Research
                     </h6>
@@ -198,7 +198,7 @@
         <!-- Definition ##################-->
         <section id="VTP_Definition">
             <div class="container px-4 px-lg-5 d-flex">
-                <div class="row">
+                <div class="row col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Definition
                     </h6>
@@ -206,8 +206,8 @@
                         Using our research we were able to identify the main problems that teachers face.
                     </h6>
                     <div class="d-flex">
-                        <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-5 pe-5 align-self-end imgSVG">
-                        <div class="col-md-6 align-self-center ms-0 ms-md-5">
+                        <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-5 opacity-75 pe-5 align-self-end imgSVG">
+                        <div class="col-md-7 align-self-center ms-0 ms-md-5">
                             <p class="">
                                 As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
                                 </br>
@@ -216,7 +216,7 @@
                             </br>
                         </div>
                     </div>
-                    <img src="../assets/img/UX_VTP/UX_VTP_compete.png" alt="Virtual Teaching Platform - Competitor Analysis" class="mt-5 pt-5 col-12 col-md-11 mx-auto">
+                    <img src="../assets/img/UX_VTP/UX_VTP_compete.png" alt="Virtual Teaching Platform - Competitor Analysis" class="mt-5 pt-5">
                 </div>
             </div>
         </section>
@@ -224,7 +224,7 @@
         <!-- Ideation ################-->
         <section style="padding: 9.375rem 0;">
             <div class="container px-4 px-lg-5" id="VTP_Ideation">
-                <div class="">
+                <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Ideation
                     </h6>
@@ -232,7 +232,7 @@
                         Using the "I like, I wish, What If" method, we were able to generate ideas that could be used within the app.
                     </h6>
                     <div class="">
-                        <div class="mb-5 col-md-9 mx-auto">
+                        <div class="mb-5">
                             <p class="">
                                 Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.                            
                                 </br>
@@ -253,15 +253,13 @@
         <!-- Prototyping ###################-->
         <section id="VTP_Prototyping">
             <div class="container px-4 px-lg-5">
-                <div class="">
+                <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Prototyping
                     </h6>
                     <div class="">
-                        <div class="mb-5 col-md-9 mx-auto">
-                            <p>
-                                We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
-                            </p>
+                        <div class="mb-5">
+                            We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
                         </div>
                         <div class="row justify-content-center">
                             <img src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-8 col-md-3">
@@ -275,7 +273,7 @@
 
         <!-- Testing #################-->
         <div class="container px-4 px-lg-5" id="VTP_Testing">
-            <div class="" style="margin: 9.375rem 0;">
+            <div class="col-lg-10 mx-auto" style="margin: 9.375rem 0;">
                 <h6 class="leadingLine text-nav text-muted mb-5">
                     Testing
                 </h6>
@@ -302,7 +300,7 @@
         <!-- Conclusion ################-->
         <section id="VTP_Conclusion">
             <div class="container px-4 px-lg-5">
-                <div class="">
+                <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Conclusion
                     </h6>
@@ -311,7 +309,7 @@
                             <h6 class="playFair mb-5">
                                 We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
                             </h6>
-                            <div class="col-md-9 pb-5 mx-auto">
+                            <div class="pb-5">
                                 <p>
                                     With more iterations, this app would be constantly evolving to keep up with teacher needs.
                                     </br>
@@ -327,7 +325,7 @@
                     <h6 class="leadingLine text-nav text-muted my-5">
                         Final Prototype
                     </h6>
-                    <div class="row col-md-9 mx-auto">
+                    <div class="row col-md-10 mx-auto">
                         <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
                     </div>
                 </div>
