--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -111,10 +111,19 @@
             </div>
         </header>
 
-        <!-- Navigation #######################################-->
-        <section class="" style="margin: 9.375rem 0;">
+        <!-- Page Scroller ########################################### -->
+        <div class="scrollerContainer">
+            <a href="#AFA_Overview" data-section="AFA_Overview" class="scrollerBtn"><p>Overview</p><span></span></a>
+            <a href="#AFA_Research" data-section="AFA_Research" class="scrollerBtn"><p>Research</p><span></span></a>
+            <a href="#AFA_Ideation" data-section="AFA_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
+            <a href="#AFA_Evaluation" data-section="AFA_Evaluation" class="scrollerBtn"><p>Evaluation</p><span></span></a>
+            <a href="#AFA_Prototyping" data-section="AFA_Prototyping" class="scrollerBtn"><p>Prototyping</p><span></span></a>
+            <a href="#AFA_Final" data-section="AFA_Final" class="scrollerBtn"><p>Conclusion</p><span></span></a>
+        </div>
+
+        <!-- Overview ############################################# -->
+        <section class="" style="margin: 9.375rem 0;" id="AFA_Overview">
             <div class="container px-4 px-lg-5 col-lg-10">
-                <!-- Overview -->
                 <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
                     <div class="text-center col-md-4">
                         <h5>Role</h5>
@@ -151,7 +160,7 @@
             </div>
 
         <!-- Overview ################################################################-->
-            <div class="container px-4 px-lg-5" id="AFA_Overview">
+            <section class="container px-4 px-lg-5" style="padding-top: 3rem;">
                 <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Overview
@@ -178,7 +187,7 @@
                         <img src="../assets/img/UX_AFA/undraw_doll_play_evbw.svg" alt="" class="ps-5 col-md-5 align-self-end imgSVG">
                     </div>
                 </div>
-            </div>
+            </section>
         </section>
 
         <!-- Research #########################################-->
