--- a/CaseStudies/UX_Test.html
+++ b/CaseStudies/UX_Test.html
@@ -112,17 +112,17 @@
         </header>
 
         <!-- Page Scroller ########################################### -->
-        <section class="scrollerContainer">
-            <a href="#AFA_Overview" data-section="Overview" class="scrollerBtn"><p>Overview</p><span></span></a>
-            <a href="#AFA_Research" data-section="Research" class="scrollerBtn"><p>Research</p><span></span></a>
-            <a href="#AFA_Ideation" data-section="Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
-            <a href="#AFA_Evaluation" data-section="Evaluation" class="scrollerBtn"><p>Evaluation</p><span></span></a>
-            <a href="#AFA_Prototyping" data-section="Prototyping" class="scrollerBtn"><p>Prototyping</p><span></span></a>
-            <a href="#AFA_Final" data-section="Conclusion" class="scrollerBtn"><p>Conclusion</p><span></span></a>
-        </section>
+        <div class="scrollerContainer">
+            <a href="#AFA_Overview" data-section="AFA_Overview" class="scrollerBtn"><p>Overview</p><span></span></a>
+            <a href="#AFA_Research" data-section="AFA_Research" class="scrollerBtn"><p>Research</p><span></span></a>
+            <a href="#AFA_Ideation" data-section="AFA_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
+            <a href="#AFA_Evaluation" data-section="AFA_Evaluation" class="scrollerBtn"><p>Evaluation</p><span></span></a>
+            <a href="#AFA_Prototyping" data-section="AFA_Prototyping" class="scrollerBtn"><p>Prototyping</p><span></span></a>
+            <a href="#AFA_Final" data-section="AFA_Conclusion" class="scrollerBtn"><p>Conclusion</p><span></span></a>
+        </div>
 
         <!-- Overview ############################################# -->
-        <section class="" style="margin: 9.375rem 0;">
+        <section class="" style="margin: 9.375rem 0;" id="AFA_Overview">
             <div class="container px-4 px-lg-5 col-lg-10">
                 <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
                     <div class="text-center col-md-4">
@@ -160,7 +160,7 @@
             </div>
 
         <!-- Overview ################################################################-->
-            <section class="container px-4 px-lg-5" id="AFA_Overview">
+            <section class="container px-4 px-lg-5" style="padding-top: 3rem;">
                 <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Overview
@@ -224,7 +224,7 @@
         </section>
 
         <!-- Ideation ########################################-->
-        <section style="padding: 9.375rem 0 0 0;" id="AFA_Ideation">
+        <section id="AFA_Ideation">
             <div class="container px-4 px-lg-5">
                 <div class="col-lg-10 mx-auto">
                     <!-- Title -->
