--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -112,7 +112,7 @@
         </header>
 
         <!-- Page Scroller ########################################### -->
-        <div class="scrollerContainer">
+        <div class="scrollerContainer d-none">
             <a href="#AFA_Overview" data-section="AFA_Overview" class="scrollerBtn"><p>Overview</p><span></span></a>
             <a href="#AFA_Research" data-section="AFA_Research" class="scrollerBtn"><p>Research</p><span></span></a>
             <a href="#AFA_Ideation" data-section="AFA_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
