Finished with navigation, for now

--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -112,7 +112,7 @@
         </header>
 
         <!-- Page Scroller ########################################### -->
-        <div class="scrollerContainer d-none">
+        <div class="scrollerContainer d-none d-md-block">
             <a href="#AFA_Overview" data-section="AFA_Overview" class="scrollerBtn"><p>Overview</p><span></span></a>
             <a href="#AFA_Research" data-section="AFA_Research" class="scrollerBtn"><p>Research</p><span></span></a>
             <a href="#AFA_Ideation" data-section="AFA_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
@@ -142,8 +142,7 @@
                     <div class="text-center col-md-4">
                         <h5>Duration</h5>
                         <p>
-                            4 weeks <br>
-                            (Mar 28 - Apr 22 )
+                            4 weeks
                         </p>
                     </div>
                 </div>
@@ -224,8 +223,8 @@
         </section>
 
         <!-- Ideation ########################################-->
-        <section style="padding: 9.375rem 0 0 0;">
-            <div class="container px-4 px-lg-5" id="AFA_Ideation">
+        <section id="AFA_Ideation">
+            <div class="container px-4 px-lg-5">
                 <div class="col-lg-10 mx-auto">
                     <!-- Title -->
                     <h6 class="leadingLine text-nav text-muted mb-5">
