--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -115,6 +115,13 @@
         </header>
 
         <!-- Case Study Navigation #####################################-->
+        <div class="scrollerContainer d-none d-md-block">
+            <a href="#TD_Research" data-section="TD_Research" class="scrollerBtn"><p>Research</p><span></span></a>
+            <a href="#TD_Analysis" data-section="TD_Analysis" class="scrollerBtn"><p>Analysis</p><span></span></a>
+            <a href="#TD_Ideation" data-section="TD_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
+            <a href="#TD_Prototyping" data-section="TD_Prototyping" class="scrollerBtn"><p>Prototyping</p><span></span></a>
+            <a href="#TD_Final" data-section="TD_Final" class="scrollerBtn"><p>Conclusion</p><span></span></a>
+        </div>
         <section class="" style="margin: 9.375rem 0;">
             <div class="container px-4 px-lg-5">
                 <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
@@ -135,8 +142,7 @@
                     <div class="text-center col-md-4">
                         <h5>Duration</h5>
                         <p>
-                            3 weeks <br>
-                            (Feb 27 - Mar 18)
+                            5 weeks
                         </p>
                     </div>
                 </div>
@@ -149,80 +155,80 @@
                     <a class="hvr-sweep" href="#TD_Final">Final Product</a>
                 </div>
             </div>
+        </section>
 
         <!-- Research #########################-->
-            <div class="container px-4 px-lg-5" id="TD_Research">
-                <div class="col-lg-10 mx-auto">
-                    <h6 class="leadingLine text-nav text-muted mb-5">
-                        Research
-                    </h6>
+        <section class="container px-4 px-lg-5" id="TD_Research">
+            <div class="col-lg-10 mx-auto">
+                <h6 class="leadingLine text-nav text-muted mb-5">
+                    Research
+                </h6>
 
-                    <!-- Proto-persona -->
-                    <h6 class="playFair mb-5 pb-4">
-                        We started by developing a proto-persona.
-                    </h6>
-                    <div class="d-flex justify-content-between mb-5 row">
-                        <div class="order-1 order-lg-0 col-lg-3 align-items-center my-auto">
-                            <div class="pt-5 pb-1 py-lg-4">
-                                <p>
-                                    <b>Name:</b> Williams T. Franklin <br>
-                                    <b>Age:</b> 36 years old <br>
-                                    <b>Occupation:</b> Mid-level IT Manager <br>
-                                    <b>Status:</b> Married, 3 kids <br>
-                                    <b>Location:</b> Long Island, NY
-                                </p>
-                            </div>
-                            <div class="py-1 py-lg-4">
-                                <p>
-                                    <b>Goals & Needs:</b>
-                                    <ul>
-                                        <li>College funds for the kids</li>
-                                        <li>Retirement</li>
-                                        <li>Passive income investment</li>
-                                        <li>Estate and Wills</li>
-                                    </ul>
-                                </p>
-                            </div>
+                <!-- Proto-persona -->
+                <h6 class="playFair mb-5 pb-4">
+                    We started by developing a proto-persona.
+                </h6>
+                <div class="d-flex justify-content-between mb-5 row">
+                    <div class="order-1 order-lg-0 col-lg-3 align-items-center my-auto">
+                        <div class="pt-5 pb-1 py-lg-4">
+                            <p>
+                                <b>Name:</b> Williams T. Franklin <br>
+                                <b>Age:</b> 36 years old <br>
+                                <b>Occupation:</b> Mid-level IT Manager <br>
+                                <b>Status:</b> Married, 3 kids <br>
+                                <b>Location:</b> Long Island, NY
+                            </p>
                         </div>
-                        <div class="order-0 order-lg-1 col-11 col-md-8 col-lg-5 px-5">
-                            <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
-                        </div>
-                        <div class="order-2 order-lg-2 col-lg-3 align-items-center my-auto">
-                            <div class="py-1 py-lg-4">
-                                <p>
-                                    <b>Pain Points:</b>
-                                    <ul>
-                                        <li>Funds locked up for at least 2 years depending on terms</li>
-                                        <li>Best way to invest without too much research</li>
-                                        <li>Inflation outweighs interest rate</li>
-                                    </ul>
-                                </p>
-                            </div>
-                            <div class="py-1 py-lg-4">
-                                <p>
-                                    <b>Solutions & Gains</b>
-                                    <ul>
-                                        <li>Avoid middle-man fee</li>
-                                        <li>Has direct control of his investments</li>
-                                        <li>Tax benefits</li>
-                                    </ul>
-                                </p>
-                            </div>
+                        <div class="py-1 py-lg-4">
+                            <p>
+                                <b>Goals & Needs:</b>
+                                <ul>
+                                    <li>College funds for the kids</li>
+                                    <li>Retirement</li>
+                                    <li>Passive income investment</li>
+                                    <li>Estate and Wills</li>
+                                </ul>
+                            </p>
                         </div>
                     </div>
-
-                    <!-- User Path -->
-                    <div class="my-5 pt-0 pt-lg-5">
-                        <p class="pt-5 mt-5">After deciding to focus on the individual invest, we were able to determine a <b>typical user path</b> for our proto-persona to focus on (ie. Passive income, retirement plan...). </p>
+                    <div class="order-0 order-lg-1 col-11 col-md-8 col-lg-5 px-5">
+                        <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
                     </div>
-                    <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
-                    
-                    <!-- Heuristic eval -->
-                    <div class="mt-5 pt-0 pt-lg-5">
-                        <p class="pt-5">We then completed a <b>heuristic evaluation</b> of the current site to redline annotate the current problems with accessibility, design, and other issues. Our next step was to <b>interview 5 individuals who would be a typical user</b> of this site and organize our findings based on importance to the user and government agency using Figjam.</p>
+                    <div class="order-2 order-lg-2 col-lg-3 align-items-center my-auto">
+                        <div class="py-1 py-lg-4">
+                            <p>
+                                <b>Pain Points:</b>
+                                <ul>
+                                    <li>Funds locked up for at least 2 years depending on terms</li>
+                                    <li>Best way to invest without too much research</li>
+                                    <li>Inflation outweighs interest rate</li>
+                                </ul>
+                            </p>
+                        </div>
+                        <div class="py-1 py-lg-4">
+                            <p>
+                                <b>Solutions & Gains</b>
+                                <ul>
+                                    <li>Avoid middle-man fee</li>
+                                    <li>Has direct control of his investments</li>
+                                    <li>Tax benefits</li>
+                                </ul>
+                            </p>
+                        </div>
                     </div>
-                    <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
                 </div>
+
+                <!-- User Path -->
+                <div class="my-5 pt-0 pt-lg-5">
+                    <p class="pt-5 mt-5">After deciding to focus on the individual invest, we were able to determine a <b>typical user path</b> for our proto-persona to focus on (ie. Passive income, retirement plan...). </p>
+                </div>
+                <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
+                
+                <!-- Heuristic eval -->
+                <div class="mt-5 pt-0 pt-lg-5">
+                    <p class="pt-5">We then completed a <b>heuristic evaluation</b> of the current site to redline annotate the current problems with accessibility, design, and other issues. Our next step was to <b>interview 5 individuals who would be a typical user</b> of this site and organize our findings based on importance to the user and government agency using Figjam.</p>
+                </div>
+                <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
             </div>
         </section>
 
@@ -400,7 +406,7 @@
         </section>
 
         <!-- Final #################-->
-        <div class="container px-4 px-lg-5" id="TD_Final">
+        <section class="container px-4 px-lg-5" id="TD_Final">
             <div class="col-lg-10 mx-auto">
                 <!-- Final Thoughts -->
                 <h6 class="leadingLine text-nav text-muted mb-5">
@@ -470,7 +476,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <!-- Cycling -->
         <div class="mb-sm-4 UXCaseSwap">
