--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -115,7 +115,15 @@
         </header>
 
         <!-- Navigation ###########################-->
-        <section class="" style="margin: 9.375rem 0;">
+        <div class="scrollerContainer d-none d-md-block">
+            <a href="#VTP_Research" data-section="VTP_Research" class="scrollerBtn"><p>Research</p><span></span></a>
+            <a href="#VTP_Definition" data-section="VTP_Definition" class="scrollerBtn"><p>Definition</p><span></span></a>
+            <a href="#VTP_Ideation" data-section="VTP_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
+            <a href="#VTP_Prototyping" data-section="VTP_Prototyping" class="scrollerBtn"><p>Prototyping</p><span></span></a>
+            <a href="#VTP_Testing" data-section="VTP_Testing" class="scrollerBtn"><p>Testing</p><span></span></a>
+            <a href="#VTP_Conclusion" data-section="VTP_Conclusion" class="scrollerBtn"><p>Conclusion</p><span></span></a>
+        </div>
+        <section class="" style="margin: 9.375rem 0 5rem 0;">
             <div class="container px-4 px-lg-5">
                 <!-- Overview -->
                 <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
@@ -137,8 +145,7 @@
                     <div class="text-center col-md-4">
                         <h5>Duration</h5>
                         <p>
-                            2 weeks <br>
-                            (Jan 10 -  Jan 26)
+                            6 weeks
                         </p>
                     </div>
                 </div>
@@ -155,42 +162,42 @@
             </div>
 
         <!-- Research ##########################-->
-            <div class="container px-4 px-lg-5" id="VTP_Research">
-                <div class="col-lg-10 mx-auto">
-                    <h6 class="leadingLine text-nav text-muted mb-5">
-                        Research
-                    </h6>
-                    <h6 class="playFair mb-5">
-                        We started by creating a proto-persona to help us determine interview questions and our target audience.
-                    </h6>
-                    <div class="d-flex">
-                        <div class="col-md-7">
-                            <p class="">
-                                Once we completed 6 interviews with teachers and transcribed them, we completed an affinity diagram using Figjam to help visualize key things that stand out, such as the amount of resources that teachers currently use to plan lessons.
-                                </br>
-                                </br>
-                                Then, we created an empathy map to help further understand our users key pains and gains and further develop our teacher user-persona.
-                                </br>
-                                </br>
-                            </p>
+        </section>
+        <section class="container px-4 px-lg-5" id="VTP_Research">
+            <div class="col-lg-10 mx-auto">
+                <h6 class="leadingLine text-nav text-muted mb-5">
+                    Research
+                </h6>
+                <h6 class="playFair mb-5">
+                    We started by creating a proto-persona to help us determine interview questions and our target audience.
+                </h6>
+                <div class="d-flex">
+                    <div class="col-md-7">
+                        <p class="">
+                            Once we completed 6 interviews with teachers and transcribed them, we completed an affinity diagram using Figjam to help visualize key things that stand out, such as the amount of resources that teachers currently use to plan lessons.
+                            </br>
+                            </br>
+                            Then, we created an empathy map to help further understand our users key pains and gains and further develop our teacher user-persona.
+                            </br>
+                            </br>
+                        </p>
 
-                            <p class="fw-bold">
-                                The 8 key problems/concerns:
-                                </br>  
-                            </p>
-                            <ol class="text-decoration-none">
-                                <li>Enjoyments about Virtual Teaching</li>
-                                <li>Troubles with Attendance</li>
-                                <li>Difficult Student Engagement</li>
-                                <li>Parent Involvement</li>
-                                <li>Difficulty with Programs</li>
-                                <li>Experiences about Teaching Virtually</li>
-                                <li>Resources commonly used</li>
-                                <li>Resources needed</li>
-                            </ol>
-                        </div>
-                        <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
+                        <p class="fw-bold">
+                            The 8 key problems/concerns:
+                            </br>  
+                        </p>
+                        <ol class="text-decoration-none">
+                            <li>Enjoyments about Virtual Teaching</li>
+                            <li>Troubles with Attendance</li>
+                            <li>Difficult Student Engagement</li>
+                            <li>Parent Involvement</li>
+                            <li>Difficulty with Programs</li>
+                            <li>Experiences about Teaching Virtually</li>
+                            <li>Resources commonly used</li>
+                            <li>Resources needed</li>
+                        </ol>
                     </div>
+                    <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
                 </div>
             </div>
         </section>
@@ -222,8 +229,8 @@
         </section>
 
         <!-- Ideation ################-->
-        <section style="padding: 9.375rem 0;">
-            <div class="container px-4 px-lg-5" id="VTP_Ideation">
+        <section style="padding: 9.375rem 0;" id="VTP_Ideation">
+            <div class="container px-4 px-lg-5">
                 <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Ideation
@@ -272,7 +279,7 @@
         </section>
 
         <!-- Testing #################-->
-        <div class="container px-4 px-lg-5" id="VTP_Testing">
+        <section class="container px-4 px-lg-5" id="VTP_Testing">
             <div class="col-lg-10 mx-auto" style="margin: 9.375rem 0;">
                 <h6 class="leadingLine text-nav text-muted mb-5">
                     Testing
@@ -295,7 +302,7 @@
                     <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
                 </div>
             </div>
-        </div>
+        </section>
 
         <!-- Conclusion ################-->
         <section id="VTP_Conclusion">
