--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
         <!-- Projects-->
         <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
-                <h6 class="leadingLine text-nav text-muted mb-5 pb-5 pb-lg-0 mb-lg-6">
-                    Featured Projects
-                </h6>
+                <div class="col-lg-10 mx-auto mb-5 pb-5 pb-lg-0 mb-lg-6">
+                    <h6 class="leadingLine text-nav text-muted">
+                        Featured Projects
+                    </h6>
+                </div>
 
                 <!-- ChaseWick.com -->
                 <div class="row gx-0 UXCase">
@@ -129,18 +131,18 @@
                             <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_CW.html">View Case Study</a>
                         </div>
                     </div>
-                    <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
+                    <div class="order-0 order-lg-1 col-xl-6 col-lg-6 UXCaseImg">
                         <a href="./CaseStudies/UX_CW.html">
-                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ChaseWick_HALF.png" alt="..." />
+                            <img class="img-fluid mb-4" src="./assets/img/ChaseWick_02.png" alt="..." />
                         </a>
                     </div>
                 </div>
                 <!-- Virtual Teaching Platform-->
                 <div class="row gx-0 UXCase">
-                    <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
+                    <div class="order-0 order-lg-0 col-xl-6 col-lg-6 UXCaseImg">
                         <a href="./CaseStudies/UX_VTP.html">
-                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/VirtualTeachingApp_HALF.png" alt="..." />
-                            </a>
+                            <img class="img-fluid mb-4" src="./assets/img/VirtualTeachingApp_02.png" alt="..." />
+                        </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <div class="featured-text-right">
@@ -172,18 +174,18 @@
                             <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_TD.html">View Case Study</a>
                         </div>
                     </div>
-                    <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
+                    <div class="order-0 order-lg-1 col-xl-6 col-lg-6 UXCaseImg">
                         <a href="./CaseStudies/UX_TD.html">
-                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/TreasuryDirect_HALF.png" alt="..." />
+                            <img class="img-fluid mb-4" src="./assets/img/TreasuryDirect_02.png" alt="..." />
                         </a>
                     </div>
                 </div>
 
                 <!-- ArtsForAll.com -->
                 <div class="row gx-0 UXCase">
-                    <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
+                    <div class="order-0 order-lg-0 col-xl-6 col-lg-6 UXCaseImg">
                         <a href="./CaseStudies/UX_AFA.html">
-                            <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
+                            <img class="img-fluid mb-4" src="./assets/img/ArtsForAll_02.png" alt="..." />
                         </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -206,10 +208,12 @@
         <!-- Illustration -->
         <section id="illustrations">
             <div class="container px-4 px-lg-5">
-                <h6 class="leadingLine text-nav text-light text-opacity-75 mb-5 pb-5 pb-lg-0 mb-lg-6">
-                    Illustrations
-                </h6>
-                <div class="row">
+                <div class="col-lg-10 mx-auto mb-5 pb-5 pb-lg-0 mb-lg-6">
+                    <h6 class="leadingLine text-nav text-muted">
+                        Illustrations
+                    </h6>
+                </div>
+                <div class="row col-lg-10 mx-auto">
                     <!-- 3D assets -->
                     <h4 class="pb-5 mt-3 text-light text-opacity-75" id="3Dassets">3D assets</h4>
                     <div class="container-fluid pictures3Da">
@@ -232,7 +236,7 @@
                             <img class="" src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_02_TN.png">
                         </a>
                     </div>
-                    <div class="container-fluid pictures3Db mb-5 pb-5">
+                    <div class="container-fluid pictures3Db mb-5">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO.png" data-caption="2005 Aston Martin DB9">
                             <img class="" src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO_TN.png">
                         </a>
@@ -318,7 +322,7 @@
 
                     <!-- 2D illustrations -->
                     <h4 class="py-5 mt-5 text-light text-opacity-75" id="2Dassets">2D illustrations</h4>
-                    <div class="container-fluid picturesTrad mb-5 pb-5">
+                    <div class="container-fluid picturesTrad mb-5">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
                             <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
                         </a>
