--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -112,6 +112,13 @@
         </header>
 
         <!-- Navigation ###########################-->
+        <div class="scrollerContainer d-none d-md-block">
+            <a href="#CW_Research" data-section="CW_Research" class="scrollerBtn"><p>Research</p><span></span></a>
+            <a href="#CW_Definition" data-section="CW_Definition" class="scrollerBtn"><p>Definition</p><span></span></a>
+            <a href="#CW_Ideation" data-section="CW_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
+            <a href="#CW_Prototyping" data-section="CW_Prototyping" class="scrollerBtn"><p>Prototyping</p><span></span></a>
+            <a href="#CW_Conclusion" data-section="CW_Conclusion" class="scrollerBtn"><p>Conclusion</p><span></span></a>
+        </div>
         <section class="" style="margin: 9.375rem 0;">
             <div class="container px-4 px-lg-5">
                 <!-- Overview -->
@@ -136,8 +143,7 @@
                     <div class="text-center col-md-4">
                         <h5>Duration</h5>
                         <p>
-                            4 weeks <br>
-                            (Apr 03 -  May 06)
+                            7 weeks
                         </p>
                     </div>
                 </div>
@@ -153,7 +159,7 @@
             </div>
 
         <!-- Research ##########################-->
-            <div class="container px-4 px-lg-5" id="CW_Research">
+            <section class="container px-4 px-lg-5" id="CW_Research">
                 <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Research
@@ -191,7 +197,7 @@
                         We conducted a total of 4 user interviews to see what people like when it comes to candles and how they prefer to purchase them. These interviews helped us learn more about what people want when it comes to price, scent types, how long they last, if they would prefer a monthly subscription or not, if they care about a percentage of the price going to charity or if they would be interested in recycling or not. 
                     </div>
                 </div>
-            </div>
+            </section>
         </section>
 
         <!-- Definition ##################-->
@@ -264,8 +270,8 @@
         </section>
 
         <!-- Ideation ################-->
-        <section style="padding: 9.375rem 0;">
-            <div class="container px-4 px-lg-5" id="CW_Ideation">
+        <section style="padding: 9.375rem 0;" id="CW_Ideation">
+            <div class="container px-4 px-lg-5">
                 <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Ideation
