--- a/CaseStudies/UX_Test.html
+++ b/CaseStudies/UX_Test.html
@@ -118,7 +118,7 @@
             <a href="#AFA_Ideation" data-section="AFA_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
             <a href="#AFA_Evaluation" data-section="AFA_Evaluation" class="scrollerBtn"><p>Evaluation</p><span></span></a>
             <a href="#AFA_Prototyping" data-section="AFA_Prototyping" class="scrollerBtn"><p>Prototyping</p><span></span></a>
-            <a href="#AFA_Final" data-section="AFA_Conclusion" class="scrollerBtn"><p>Conclusion</p><span></span></a>
+            <a href="#AFA_Final" data-section="AFA_Final" class="scrollerBtn"><p>Conclusion</p><span></span></a>
         </div>
 
         <!-- Overview ############################################# -->
